--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    width: 1200px;
+    margin: 30px auto;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
